syntax = "proto3";

package rbac;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
option go_package = "genproto/urbacpb;urbacpb";


service RBACService {
  // ----------------------
  // MODULES
  // ----------------------
  rpc CreateModule(CreateModuleRequest) returns (ModuleResponse);
  rpc UpdateModule(UpdateModuleRequest) returns (ModuleResponse);
  rpc DeactivateModule(DeactivateModuleRequest) returns (google.protobuf.Empty);
  rpc DeleteModule(DeleteModuleRequest) returns (google.protobuf.Empty);
  rpc ListModules(ListModulesRequest) returns (ListModulesResponse);

  // ----------------------
  // SUBMODULES
  // ----------------------
  rpc CreateSubmodule(CreateSubmoduleRequest) returns (SubmoduleResponse);
  rpc UpdateSubmodule(UpdateSubmoduleRequest) returns (SubmoduleResponse);
  rpc DeactivateSubmodule(DeactivateSubmoduleRequest) returns (google.protobuf.Empty);
  rpc DeleteSubmodule(DeleteSubmoduleRequest) returns (google.protobuf.Empty);
  rpc ListSubmodules(ListSubmodulesRequest) returns (ListSubmodulesResponse);

  // ----------------------
  // PERMISSION TYPES
  // ----------------------
  rpc CreatePermissionType(CreatePermissionTypeRequest) returns (PermissionTypeResponse);
  rpc UpdatePermissionType(UpdatePermissionTypeRequest) returns (PermissionTypeResponse);
  rpc DeactivatePermissionType(DeactivatePermissionTypeRequest) returns (google.protobuf.Empty);
  rpc ListPermissionTypes(google.protobuf.Empty) returns (ListPermissionTypesResponse);

  // ----------------------
  // ROLES
  // ----------------------
  rpc CreateRole(CreateRoleRequest) returns (RoleResponse);
  rpc UpdateRole(UpdateRoleRequest) returns (RoleResponse);
  rpc DeactivateRole(DeactivateRoleRequest) returns (google.protobuf.Empty);
  rpc DeleteRole(DeleteRoleRequest) returns (google.protobuf.Empty);
  rpc ListRoles(google.protobuf.Empty) returns (ListRolesResponse);

  rpc AssignRolePermission(AssignRolePermissionRequest) returns (google.protobuf.Empty);
  rpc RevokeRolePermission(RevokeRolePermissionRequest) returns (google.protobuf.Empty);
  rpc ListRolePermissions(ListRolePermissionsRequest) returns (ListRolePermissionsResponse);

  // ----------------------
  // USER ROLES
  // ----------------------
  rpc AssignUserRole(AssignUserRoleRequest) returns (google.protobuf.Empty);
  rpc RemoveUserRole(RemoveUserRoleRequest) returns (google.protobuf.Empty);
  rpc ListUserRoles(ListUserRolesRequest) returns (ListUserRolesResponse);

  // ----------------------
  // USER PERMISSION OVERRIDES
  // ----------------------
  rpc AssignUserPermissionOverride(AssignUserPermissionOverrideRequest) returns (google.protobuf.Empty);
  rpc RevokeUserPermissionOverride(RevokeUserPermissionOverrideRequest) returns (google.protobuf.Empty);
  rpc ListUserPermissionOverrides(ListUserPermissionOverridesRequest) returns (ListUserPermissionOverridesResponse);

  // ----------------------
  // PERMISSION QUERIES
  // ----------------------
  rpc GetUserPermissions(GetUserPermissionsRequest) returns (GetUserPermissionsResponse);
  rpc GetUserModulePermissions(GetUserModulePermissionsRequest) returns (GetUserModulePermissionsResponse);
  rpc GetUserSubmodulePermissions(GetUserSubmodulePermissionsRequest) returns (GetUserSubmodulePermissionsResponse);
  rpc CheckUserPermission(CheckUserPermissionRequest) returns (CheckUserPermissionResponse);

  // ----------------------
  // AUDIT LOGS
  // ----------------------
  rpc ListPermissionAuditEvents(ListPermissionAuditEventsRequest) returns (ListPermissionAuditEventsResponse);
}

//
// ---------- ENTITIES ----------
//

message Module {
  int64 id = 1;
  string code = 2;
  string name = 3;
  int64 parent_id = 4; // optional, for module parenting
  bool is_active = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message Submodule {
  int64 id = 1;
  int64 module_id = 2;
  string code = 3;
  string name = 4;
  bool is_active = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message PermissionType {
  int64 id = 1;
  string code = 2;
  string description = 3;
  bool is_active = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message Role {
  int64 id = 1;
  string name = 2;
  string description = 3;
  bool is_active = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message RolePermission {
  int64 id = 1;
  int64 role_id = 2;
  int64 module_id = 3;
  int64 submodule_id = 4;
  int64 permission_type_id = 5;
  bool allow = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message UserRole {
  int64 id = 1;
  string user_id = 2;
  int64 role_id = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message UserPermissionOverride {
  int64 id = 1;
  string user_id = 2;
  int64 module_id = 3;
  int64 submodule_id = 4;
  int64 permission_type_id = 5;
  bool allow = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message AuditEvent {
  int64 id = 1;
  int64 actor_id = 2;
  string object_type = 3;
  int64 object_id = 4;
  string action = 5;
  string payload = 6;
  google.protobuf.Timestamp created_at = 7;
}

//
// ---------- REQUESTS / RESPONSES ----------
//

// Modules
message CreateModuleRequest {
  string code = 1;
  string name = 2;
  int64 parent_id = 3;
}

message UpdateModuleRequest {
  int64 id = 1;
  string code = 2;
  string name = 3;
  int64 parent_id = 4;
}

message DeactivateModuleRequest { int64 id = 1; }
message DeleteModuleRequest { int64 id = 1; }

message ListModulesRequest { bool include_inactive = 1; }
message ListModulesResponse { repeated Module modules = 1; }
message ModuleResponse { Module module = 1; }

// Submodules
message CreateSubmoduleRequest {
  int64 module_id = 1;
  string code = 2;
  string name = 3;
}

message UpdateSubmoduleRequest {
  int64 id = 1;
  string code = 2;
  string name = 3;
}

message DeactivateSubmoduleRequest { int64 id = 1; }
message DeleteSubmoduleRequest { int64 id = 1; }

message ListSubmodulesRequest { int64 module_id = 1; bool include_inactive = 2; }
message ListSubmodulesResponse { repeated Submodule submodules = 1; }
message SubmoduleResponse { Submodule submodule = 1; }

// Permission Types
message CreatePermissionTypeRequest {
  string code = 1;
  string description = 2;
}

message UpdatePermissionTypeRequest {
  int64 id = 1;
  string code = 2;
  string description = 3;
}

message DeactivatePermissionTypeRequest { int64 id = 1; }

message ListPermissionTypesResponse { repeated PermissionType permission_types = 1; }
message PermissionTypeResponse { PermissionType permission_type = 1; }

// Roles
message CreateRoleRequest {
  string name = 1;
  string description = 2;
}

message UpdateRoleRequest {
  int64 id = 1;
  string name = 2;
  string description = 3;
}

message DeactivateRoleRequest { int64 id = 1; }
message DeleteRoleRequest { int64 id = 1; }

message ListRolesResponse { repeated Role roles = 1; }
message RoleResponse { Role role = 1; }

// Role Permissions
message AssignRolePermissionRequest {
  int64 role_id = 1;
  int64 module_id = 2;
  int64 submodule_id = 3;
  int64 permission_type_id = 4;
  bool allow = 5;
}

message RevokeRolePermissionRequest {
  int64 role_id = 1;
  int64 module_id = 2;
  int64 submodule_id = 3;
  int64 permission_type_id = 4;
}

message ListRolePermissionsRequest { int64 role_id = 1; }
message ListRolePermissionsResponse { repeated RolePermission role_permissions = 1; }

// User Roles
message AssignUserRoleRequest {
  string user_id = 1;
  int64 role_id = 2;
}

message RemoveUserRoleRequest {
  string user_id = 1;
  int64 role_id = 2;
}

message ListUserRolesRequest { string user_id = 1; }
message ListUserRolesResponse { repeated UserRole roles = 1; }

// User Permission Overrides
message AssignUserPermissionOverrideRequest {
  string user_id = 1;
  int64 module_id = 2;
  int64 submodule_id = 3;
  int64 permission_type_id = 4;
  bool allow = 5;
}

message RevokeUserPermissionOverrideRequest {
  int64 user_id = 1;
  int64 module_id = 2;
  int64 submodule_id = 3;
  int64 permission_type_id = 4;
}

message ListUserPermissionOverridesRequest { int64 user_id = 1; }
message ListUserPermissionOverridesResponse { repeated UserPermissionOverride overrides = 1; }

// Permission Queries
message GetUserPermissionsRequest { int64 user_id = 1; }
message GetUserPermissionsResponse { repeated RolePermission permissions = 1; }

message GetUserModulePermissionsRequest {
  int64 user_id = 1;
  int64 module_id = 2;
}
message GetUserModulePermissionsResponse { repeated RolePermission permissions = 1; }

message GetUserSubmodulePermissionsRequest {
  int64 user_id = 1;
  int64 submodule_id = 2;
}
message GetUserSubmodulePermissionsResponse { repeated RolePermission permissions = 1; }

message CheckUserPermissionRequest {
  int64 user_id = 1;
  int64 module_id = 2;
  int64 submodule_id = 3;
  int64 permission_type_id = 4;
}
message CheckUserPermissionResponse { bool allowed = 1; }

// Audit Logs
message ListPermissionAuditEventsRequest {
  int64 user_id = 1;
  int64 module_id = 2;
  int64 submodule_id = 3;
  int64 role_id = 4;
}
message ListPermissionAuditEventsResponse { repeated AuditEvent events = 1; }
